fix overflow in ios

--- a/src/styles.css
+++ b/src/styles.css
@@ -156,7 +156,7 @@ section.third--section {
 
 .loader {
   position: absolute;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -381,6 +381,8 @@ body:before {
 @media(max-width: 776px) {
   body { 
     overflow-x: hidden;
+    position: relative;
+    /* height: 100%; */
   }
   footer {
     position: relative;
